--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,37 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    height: 100vh;;
+  }
+  
+  *{
+    border: 1px solid black;
+  }
+  
+  .counter{
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 100px;
+  background-color: black;
+  color: white;
+  width: 100%;
+  justify-content: center;
+  }
+  
+  .counter div{
+    margin: 15px;
+  }
+  
+  
+  .clock{
+    font-size: 100px;
+    color: white;
+  }
+  
